44_検索条件の追加と申込み状況機能の追加